src/golden/cards/templates/bindings/errors/test.golden/nomulti.fl
	card NoMultipleBindings
		template label
			show-message <- 'hello'
			show-message <- 'hello'